--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Random Quote Machine</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     </head>
     <body>
@@ -36,7 +36,7 @@
         </div>
         <div class="footer"><a href="https://codepen.io/your-work/">George Shalamberidze</a></div>
 
-        <script src="/script.js"></script>
-        <script src="/quote.json"></script>
+        <script src="script.js"></script>
+        <script src="quote.json"></script>
     </body>
     </html>
